--- a/classification_exercises.ipynb
+++ b/classification_exercises.ipynb
@@ -536,10 +536,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>is_senior_citizen</th>\n",
+       "      <th>phone_service</th>\n",
+       "      <th>internet_service</th>\n",
+       "      <th>contract_type</th>\n",
+       "      <th>monthly_charges</th>\n",
+       "      <th>total_charges</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>7049.000000</td>\n",
+       "      <td>7049.000000</td>\n",
+       "      <td>7049.000000</td>\n",
+       "      <td>7049.000000</td>\n",
+       "      <td>7049.000000</td>\n",
+       "      <td>7038.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.162009</td>\n",
+       "      <td>1.324585</td>\n",
+       "      <td>1.222585</td>\n",
+       "      <td>0.690878</td>\n",
+       "      <td>64.747014</td>\n",
+       "      <td>2283.043883</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.368485</td>\n",
+       "      <td>0.642709</td>\n",
+       "      <td>0.779068</td>\n",
+       "      <td>0.833757</td>\n",
+       "      <td>30.099460</td>\n",
+       "      <td>2266.521984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>18.250000</td>\n",
+       "      <td>18.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>35.450000</td>\n",
+       "      <td>401.587500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>70.350000</td>\n",
+       "      <td>1397.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>89.850000</td>\n",
+       "      <td>3793.775000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>118.750000</td>\n",
+       "      <td>8684.800000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       is_senior_citizen  phone_service  internet_service  contract_type  \\\n",
+       "count        7049.000000    7049.000000       7049.000000    7049.000000   \n",
+       "mean            0.162009       1.324585          1.222585       0.690878   \n",
+       "std             0.368485       0.642709          0.779068       0.833757   \n",
+       "min             0.000000       0.000000          0.000000       0.000000   \n",
+       "25%             0.000000       1.000000          1.000000       0.000000   \n",
+       "50%             0.000000       1.000000          1.000000       0.000000   \n",
+       "75%             0.000000       2.000000          2.000000       1.000000   \n",
+       "max             1.000000       2.000000          2.000000       2.000000   \n",
+       "\n",
+       "       monthly_charges  total_charges  \n",
+       "count      7049.000000    7038.000000  \n",
+       "mean         64.747014    2283.043883  \n",
+       "std          30.099460    2266.521984  \n",
+       "min          18.250000      18.800000  \n",
+       "25%          35.450000     401.587500  \n",
+       "50%          70.350000    1397.100000  \n",
+       "75%          89.850000    3793.775000  \n",
+       "max         118.750000    8684.800000  "
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "customer._get_numeric_data().describe()"
+   ]
   },
   {
    "cell_type": "markdown",
