Added operating system command

--- a/classification_exercises.ipynb
+++ b/classification_exercises.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,53 +428,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Titanic Dataset\n",
     "\n",
-    "def get_titanic_data():\n",
-    "    filename = \"titanic.csv\"\n",
+    "# def get_titanic_data():\n",
+    "#     filename = \"titanic.csv\"\n",
     "\n",
-    "    if os.path.isfile(filename):\n",
-    "        return pd.read_csv(filename)\n",
-    "    else:\n",
-    "        # read the SQL query into a dataframe\n",
-    "        df = pd.read_sql('SELECT * FROM passengers', get_connection('titanic_db'))\n",
+    "#     if os.path.isfile(filename):\n",
+    "#         return pd.read_csv(filename)\n",
+    "#     else:\n",
+    "#         # read the SQL query into a dataframe\n",
+    "#         df = pd.read_sql('SELECT * FROM passengers', get_connection('titanic_db'))\n",
     "\n",
-    "        # Write that dataframe to disk for later. Called \"caching\" the data for later.\n",
-    "        df.to_csv(filename, index = False)\n",
+    "#         # Write that dataframe to disk for later. Called \"caching\" the data for later.\n",
+    "#         df.to_csv(filename, index = False)\n",
     "\n",
-    "        # Return the dataframe to the calling code\n",
-    "    return df\n",
+    "#         # Return the dataframe to the calling code\n",
+    "#     return df\n",
     "\n",
-    "# import acquire\n",
-    "# acquire.get_titanic_data\n"
+    "import acquire\n",
+    "acquire.get_titanic_data\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Iris Dataset\n",
     "\n",
-    "def get_iris_data():\n",
-    "    filename = \"iris.csv\"\n",
+    "# def get_iris_data():\n",
+    "#     filename = \"iris.csv\"\n",
     "\n",
-    "    if os.path.isfile(filename):\n",
-    "       return pd.read_csv(filename)\n",
-    "    else:\n",
-    "        #read the SQL query into a dataframe\n",
-    "        df = pd.read_sql('SELECT * FROM measurements AS m JOIN species AS s on m.species_id = s.species_id', get_connection('iris_db'))\n",
+    "#     if os.path.isfile(filename):\n",
+    "#        return pd.read_csv(filename)\n",
+    "#     else:\n",
+    "#         #read the SQL query into a dataframe\n",
+    "#         df = pd.read_sql('SELECT * FROM measurements AS m JOIN species AS s on m.species_id = s.species_id', get_connection('iris_db'))\n",
     "\n",
-    "        #Write that dataframe to disk for later. Called \"caching\" the data for later.\n",
-    "        df.to_csv(filename, index = False)\n",
+    "#         #Write that dataframe to disk for later. Called \"caching\" the data for later.\n",
+    "#         df.to_csv(filename, index = False)\n",
     "\n",
-    "        #Return the dataframe to the calling code\n",
-    "    return df\n",
+    "#         #Return the dataframe to the calling code\n",
+    "#     return df\n",
     "\n",
     "# get_iris_data()"
    ]
