Titanic pre Prpgram Bugs

--- a/classification_exercises.ipynb
+++ b/classification_exercises.ipynb
@@ -568,14 +568,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from acquire import *\n",
-    "from prepare import *\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
@@ -606,109 +605,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>species_id</th>\n",
-       "      <th>species_name</th>\n",
-       "      <th>sepal_length</th>\n",
-       "      <th>sepal_width</th>\n",
-       "      <th>petal_length</th>\n",
-       "      <th>petal_width</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>setosa</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>setosa</td>\n",
-       "      <td>4.9</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>setosa</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>setosa</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>setosa</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   species_id species_name  sepal_length  sepal_width  petal_length  \\\n",
-       "0           1       setosa           5.1          3.5           1.4   \n",
-       "1           1       setosa           4.9          3.0           1.4   \n",
-       "2           1       setosa           4.7          3.2           1.3   \n",
-       "3           1       setosa           4.6          3.1           1.5   \n",
-       "4           1       setosa           5.0          3.6           1.4   \n",
-       "\n",
-       "   petal_width  \n",
-       "0          0.2  \n",
-       "1          0.2  \n",
-       "2          0.2  \n",
-       "3          0.2  \n",
-       "4          0.2  "
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     " \n",
     "'''\n",
@@ -831,73 +730,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(LabelEncoder(),\n",
-       "      species  sepal_length  sepal_width  petal_length  petal_width\n",
-       " 30         0           4.8          3.1           1.6          0.2\n",
-       " 36         0           5.5          3.5           1.3          0.2\n",
-       " 29         0           4.7          3.2           1.6          0.2\n",
-       " 55         1           5.7          2.8           4.5          1.3\n",
-       " 118        2           7.7          2.6           6.9          2.3\n",
-       " ..       ...           ...          ...           ...          ...\n",
-       " 11         0           4.8          3.4           1.6          0.2\n",
-       " 0          0           5.1          3.5           1.4          0.2\n",
-       " 104        2           6.5          3.0           5.8          2.2\n",
-       " 7          0           5.0          3.4           1.5          0.2\n",
-       " 147        2           6.5          3.0           5.2          2.0\n",
-       " \n",
-       " [112 rows x 5 columns],\n",
-       "      species  sepal_length  sepal_width  petal_length  petal_width\n",
-       " 135        2           7.7          3.0           6.1          2.3\n",
-       " 34         0           4.9          3.1           1.5          0.2\n",
-       " 61         1           5.9          3.0           4.2          1.5\n",
-       " 117        2           7.7          3.8           6.7          2.2\n",
-       " 42         0           4.4          3.2           1.3          0.2\n",
-       " 38         0           4.4          3.0           1.3          0.2\n",
-       " 65         1           6.7          3.1           4.4          1.4\n",
-       " 125        2           7.2          3.2           6.0          1.8\n",
-       " 80         1           5.5          2.4           3.8          1.1\n",
-       " 19         0           5.1          3.8           1.5          0.3\n",
-       " 64         1           5.6          2.9           3.6          1.3\n",
-       " 33         0           5.5          4.2           1.4          0.2\n",
-       " 115        2           6.4          3.2           5.3          2.3\n",
-       " 146        2           6.3          2.5           5.0          1.9\n",
-       " 94         1           5.6          2.7           4.2          1.3\n",
-       " 116        2           6.5          3.0           5.5          1.8\n",
-       " 28         0           5.2          3.4           1.4          0.2\n",
-       " 32         0           5.2          4.1           1.5          0.1\n",
-       " 9          0           4.9          3.1           1.5          0.1\n",
-       " 17         0           5.1          3.5           1.4          0.3\n",
-       " 40         0           5.0          3.5           1.3          0.3\n",
-       " 22         0           4.6          3.6           1.0          0.2\n",
-       " 93         1           5.0          2.3           3.3          1.0\n",
-       " 144        2           6.7          3.3           5.7          2.5\n",
-       " 2          0           4.7          3.2           1.3          0.2\n",
-       " 77         1           6.7          3.0           5.0          1.7\n",
-       " 122        2           7.7          2.8           6.7          2.0\n",
-       " 138        2           6.0          3.0           4.8          1.8\n",
-       " 110        2           6.5          3.2           5.1          2.0\n",
-       " 56         1           6.3          3.3           4.7          1.6\n",
-       " 66         1           5.6          3.0           4.5          1.5\n",
-       " 101        2           5.8          2.7           5.1          1.9\n",
-       " 68         1           6.2          2.2           4.5          1.5\n",
-       " 76         1           6.8          2.8           4.8          1.4\n",
-       " 105        2           7.6          3.0           6.6          2.1\n",
-       " 86         1           6.7          3.1           4.7          1.5\n",
-       " 127        2           6.1          3.0           4.9          1.8\n",
-       " 92         1           5.8          2.6           4.0          1.2)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "prep_iris()"
    ]
@@ -1143,6 +978,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#prep_titanic_2\n",
+    "\n",
+    "def drop_edit_columns(df):\n",
+    "    titanic = titanic[~titanic.embark_town.isnull()]\n",
+    "    cols_to_drop = ['embarked', 'class', 'deck', 'passenger_id']\n",
+    "    titanic = titanic.drop(columns=cols_to_drop)\n",
+    "    titanic.head()\n",
+    "    return df\n",
+    "\n",
+    "def test_split(df):\n",
+    "    train_validate, test = train_test_split(titanic, test_size=.2, \n",
+    "                                        random_state=123, \n",
+    "                                        stratify=titanic.survived)\n",
+    "    train, validate = train_test_split(train_validate, test_size=.3, \n",
+    "                                   random_state=123, \n",
+    "                                   stratify=train_validate.survived)\n",
+    "    return df\n",
+    "\n",
+    "def label_encode(train, test):\n",
+    "    le = LabelEncoder()\n",
+    "    train['embark_town'] = le.fit_transform(train.embark_town)\n",
+    "    test['embark_town'] = le.transform(test.embark_town)\n",
+    "    return le, train, test\n",
+    "\n",
+    "def scale_columns(train, test):\n",
+    "    scaler = MinMaxScaler()\n",
+    "    train[['age','fare']] = scaler.fit_transform(train[['age','fare']])\n",
+    "    test[['age','fare']] = scaler.transform(test[['age','fare']])\n",
+    "    return scaler, train, test\n",
+    "\n",
+    "def impute_age(train, test):\n",
+    "    avg_age = train.age.mean()\n",
+    "    train.age = train.age.fillna(avg_age)\n",
+    "    test.age = test.age.fillna(avg_age)\n",
+    "    return train, test\n",
+    "\n",
+    "def prep_titanic_2(df):\n",
+    "\n",
+    "    # drop the deck column bc most values Null\n",
+    "    drop_edit_columns\n",
+    "    \n",
+    "    train, test = train_test_split(df, train_size=.75, stratify=df.survived, random_state=123)\n",
+    "    \n",
+    "    # impute embarked town to 0,1,2\n",
+    "    train, test = label_encode_town(train, test)\n",
+    "    \n",
+    "    # scale age and fare columns\n",
+    "    train, test = scale_columns(train, test)\n",
+    "    \n",
+    "    # impute NaNs in age in train and test with the mean age in train\n",
+    "    train, test = impute_age(train, test)\n",
+    "    \n",
+    "    return scaler, train, test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def drop_columns(df):\n",
     "    df.drop(columns=['deck'], inplace=True)\n",
     "    return df\n",
@@ -1214,21 +1110,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'titanic' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-b269cc52779f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprep_titanic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtitanic\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'titanic' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
