--- a/import_testing.ipynb
+++ b/import_testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titanic = acquire.get_titanic_data(cached=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'prepare' from '/Users/coreysolitaire/codeup-data-science/classification-exercises/prepare.py'>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prepare.get_titani"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +115,7 @@
        " 92         1           5.8          2.6           4.0          1.2)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,82 +123,6 @@
    "source": [
     "iris = acquire.get_iris_data(cached=True)\n",
     "prepare.prep_iris(iris)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(MinMaxScaler(),\n",
-       " OneHotEncoder(sparse=False),\n",
-       "      passenger_id  survived  pclass     sex       age  sibsp  parch      fare  \\\n",
-       " 683           683         0       3    male  0.184561      5      2  0.091543   \n",
-       " 421           421         0       3    male  0.279696      0      0  0.015094   \n",
-       " 336           336         0       1    male  0.388421      1      0  0.129995   \n",
-       " 681           681         1       1    male  0.361239      0      0  0.149765   \n",
-       " 610           610         0       3  female  0.524327      1      5  0.061045   \n",
-       " ..            ...       ...     ...     ...       ...    ...    ...       ...   \n",
-       " 360           360         0       3    male  0.537918      1      4  0.054457   \n",
-       " 635           635         1       2  female  0.374830      0      0  0.025374   \n",
-       " 245           245         0       1    male  0.592281      2      0  0.175668   \n",
-       " 768           768         0       3    male  0.389113      1      0  0.047138   \n",
-       " 399           399         1       2  female  0.374830      0      0  0.024691   \n",
-       " \n",
-       "     embarked   class  embark_town  alone    C    Q    S  \n",
-       " 683        S   Third  Southampton      0  0.0  0.0  1.0  \n",
-       " 421        Q   Third   Queenstown      1  0.0  1.0  0.0  \n",
-       " 336        S   First  Southampton      0  0.0  0.0  1.0  \n",
-       " 681        C   First    Cherbourg      1  1.0  0.0  0.0  \n",
-       " 610        S   Third  Southampton      0  0.0  0.0  1.0  \n",
-       " ..       ...     ...          ...    ...  ...  ...  ...  \n",
-       " 360        S   Third  Southampton      0  0.0  0.0  1.0  \n",
-       " 635        S  Second  Southampton      1  0.0  0.0  1.0  \n",
-       " 245        Q   First   Queenstown      0  0.0  1.0  0.0  \n",
-       " 768        Q   Third   Queenstown      0  0.0  1.0  0.0  \n",
-       " 399        S  Second  Southampton      1  0.0  0.0  1.0  \n",
-       " \n",
-       " [668 rows x 15 columns],\n",
-       "      passenger_id  survived  pclass     sex       age  sibsp  parch      fare  \\\n",
-       " 114           114         0       3  female  0.225333      0      0  0.028221   \n",
-       " 75             75         0       3    male  0.334058      0      0  0.014932   \n",
-       " 52             52         1       1  female  0.660234      1      0  0.149765   \n",
-       " 192           192         1       3  female  0.252514      1      0  0.015330   \n",
-       " 575           575         0       3    male  0.252514      0      0  0.028302   \n",
-       " ..            ...       ...     ...     ...       ...    ...    ...       ...   \n",
-       " 699           699         0       3    male  0.565099      0      0  0.014932   \n",
-       " 510           510         1       3    male  0.388421      0      0  0.015127   \n",
-       " 885           885         0       3  female  0.524327      0      5  0.056848   \n",
-       " 559           559         1       3  female  0.483555      1      0  0.033963   \n",
-       " 229           229         0       3  female  0.389113      3      1  0.049708   \n",
-       " \n",
-       "     embarked  class  embark_town  alone    C    Q    S  \n",
-       " 114        C  Third    Cherbourg      1  1.0  0.0  0.0  \n",
-       " 75         S  Third  Southampton      1  0.0  0.0  1.0  \n",
-       " 52         C  First    Cherbourg      0  1.0  0.0  0.0  \n",
-       " 192        S  Third  Southampton      0  0.0  0.0  1.0  \n",
-       " 575        S  Third  Southampton      1  0.0  0.0  1.0  \n",
-       " ..       ...    ...          ...    ...  ...  ...  ...  \n",
-       " 699        S  Third  Southampton      1  0.0  0.0  1.0  \n",
-       " 510        Q  Third   Queenstown      1  0.0  1.0  0.0  \n",
-       " 885        Q  Third   Queenstown      0  0.0  1.0  0.0  \n",
-       " 559        S  Third  Southampton      0  0.0  0.0  1.0  \n",
-       " 229        S  Third  Southampton      0  0.0  0.0  1.0  \n",
-       " \n",
-       " [223 rows x 15 columns])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "titanic = acquire.get_titanic_data(cached=True)\n",
-    "prepare.prep_titanic(titanic)"
    ]
   },
   {
