--- a/classification_exercises.ipynb
+++ b/classification_exercises.ipynb
@@ -968,6 +968,166 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>species_id</th>\n",
+       "      <th>species_name</th>\n",
+       "      <th>sepal_length</th>\n",
+       "      <th>sepal_width</th>\n",
+       "      <th>petal_length</th>\n",
+       "      <th>petal_width</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>setosa</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>setosa</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>setosa</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>setosa</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>setosa</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   species_id species_name  sepal_length  sepal_width  petal_length  \\\n",
+       "0           1       setosa           5.1          3.5           1.4   \n",
+       "1           1       setosa           4.9          3.0           1.4   \n",
+       "2           1       setosa           4.7          3.2           1.3   \n",
+       "3           1       setosa           4.6          3.1           1.5   \n",
+       "4           1       setosa           5.0          3.6           1.4   \n",
+       "\n",
+       "   petal_width  \n",
+       "0          0.2  \n",
+       "1          0.2  \n",
+       "2          0.2  \n",
+       "3          0.2  \n",
+       "4          0.2  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iris = get_iris_data(cached=True)\n",
+    "iris.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method NDFrame.head of      species_id species_name  sepal_length  sepal_width  petal_length  \\\n",
+       "0             1       setosa           5.1          3.5           1.4   \n",
+       "1             1       setosa           4.9          3.0           1.4   \n",
+       "2             1       setosa           4.7          3.2           1.3   \n",
+       "3             1       setosa           4.6          3.1           1.5   \n",
+       "4             1       setosa           5.0          3.6           1.4   \n",
+       "..          ...          ...           ...          ...           ...   \n",
+       "145           3    virginica           6.7          3.0           5.2   \n",
+       "146           3    virginica           6.3          2.5           5.0   \n",
+       "147           3    virginica           6.5          3.0           5.2   \n",
+       "148           3    virginica           6.2          3.4           5.4   \n",
+       "149           3    virginica           5.9          3.0           5.1   \n",
+       "\n",
+       "     petal_width  species_name_versicolor  species_name_virginica  \n",
+       "0            0.2                        0                       0  \n",
+       "1            0.2                        0                       0  \n",
+       "2            0.2                        0                       0  \n",
+       "3            0.2                        0                       0  \n",
+       "4            0.2                        0                       0  \n",
+       "..           ...                      ...                     ...  \n",
+       "145          2.3                        0                       1  \n",
+       "146          1.9                        0                       1  \n",
+       "147          2.0                        0                       1  \n",
+       "148          2.3                        0                       1  \n",
+       "149          1.8                        0                       1  \n",
+       "\n",
+       "[150 rows x 8 columns]>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We do not need to use sklearn, we can just make dummy variables\n",
+    "\n",
+    "df_dummies = pd.get_dummies(iris[['species_name']], drop_first=[True, True])\n",
+    "iris = pd.concat([iris, df_dummies], axis=1)\n",
+    "iris.head"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
