--- a/import_testing.ipynb
+++ b/import_testing.ipynb
@@ -26,201 +26,123 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>species</th>\n",
-       "      <th>sepal_length</th>\n",
-       "      <th>sepal_width</th>\n",
-       "      <th>petal_length</th>\n",
-       "      <th>petal_width</th>\n",
-       "      <th>species_versicolor</th>\n",
-       "      <th>species_virginica</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>setosa</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>setosa</td>\n",
-       "      <td>4.9</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>setosa</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>setosa</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>setosa</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>3.6</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145</th>\n",
-       "      <td>virginica</td>\n",
-       "      <td>6.7</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.2</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146</th>\n",
-       "      <td>virginica</td>\n",
-       "      <td>6.3</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>147</th>\n",
-       "      <td>virginica</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.2</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>148</th>\n",
-       "      <td>virginica</td>\n",
-       "      <td>6.2</td>\n",
-       "      <td>3.4</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>149</th>\n",
-       "      <td>virginica</td>\n",
-       "      <td>5.9</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>150 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       species  sepal_length  sepal_width  petal_length  petal_width  \\\n",
-       "0       setosa           5.1          3.5           1.4          0.2   \n",
-       "1       setosa           4.9          3.0           1.4          0.2   \n",
-       "2       setosa           4.7          3.2           1.3          0.2   \n",
-       "3       setosa           4.6          3.1           1.5          0.2   \n",
-       "4       setosa           5.0          3.6           1.4          0.2   \n",
-       "..         ...           ...          ...           ...          ...   \n",
-       "145  virginica           6.7          3.0           5.2          2.3   \n",
-       "146  virginica           6.3          2.5           5.0          1.9   \n",
-       "147  virginica           6.5          3.0           5.2          2.0   \n",
-       "148  virginica           6.2          3.4           5.4          2.3   \n",
-       "149  virginica           5.9          3.0           5.1          1.8   \n",
-       "\n",
-       "     species_versicolor  species_virginica  \n",
-       "0                     0                  0  \n",
-       "1                     0                  0  \n",
-       "2                     0                  0  \n",
-       "3                     0                  0  \n",
-       "4                     0                  0  \n",
-       "..                  ...                ...  \n",
-       "145                   0                  1  \n",
-       "146                   0                  1  \n",
-       "147                   0                  1  \n",
-       "148                   0                  1  \n",
-       "149                   0                  1  \n",
-       "\n",
-       "[150 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "iris = acquire.get_iris_data(cached=True)\n",
-    "prepare.prep_iris(iris)"
+    "titanic = acquire.get_titanic_data(cached=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "iris = acquire.get_iris_data(cached=True)\n",
-    "iris.describe()"
+    "train, validate, test = prepare.prep_titanic(titanic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 497 entries, 583 to 553\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column                   Non-Null Count  Dtype  \n",
+      "---  ------                   --------------  -----  \n",
+      " 0   survived                 497 non-null    int64  \n",
+      " 1   pclass                   497 non-null    int64  \n",
+      " 2   sex                      497 non-null    object \n",
+      " 3   age                      497 non-null    float64\n",
+      " 4   sibsp                    497 non-null    int64  \n",
+      " 5   parch                    497 non-null    int64  \n",
+      " 6   fare                     497 non-null    float64\n",
+      " 7   embark_town              497 non-null    object \n",
+      " 8   alone                    497 non-null    int64  \n",
+      " 9   sex_male                 497 non-null    uint8  \n",
+      " 10  embark_town_Queenstown   497 non-null    uint8  \n",
+      " 11  embark_town_Southampton  497 non-null    uint8  \n",
+      "dtypes: float64(2), int64(5), object(2), uint8(3)\n",
+      "memory usage: 40.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "train.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 214 entries, 610 to 26\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column                   Non-Null Count  Dtype  \n",
+      "---  ------                   --------------  -----  \n",
+      " 0   survived                 214 non-null    int64  \n",
+      " 1   pclass                   214 non-null    int64  \n",
+      " 2   sex                      214 non-null    object \n",
+      " 3   age                      214 non-null    float64\n",
+      " 4   sibsp                    214 non-null    int64  \n",
+      " 5   parch                    214 non-null    int64  \n",
+      " 6   fare                     214 non-null    float64\n",
+      " 7   embark_town              214 non-null    object \n",
+      " 8   alone                    214 non-null    int64  \n",
+      " 9   sex_male                 214 non-null    uint8  \n",
+      " 10  embark_town_Queenstown   214 non-null    uint8  \n",
+      " 11  embark_town_Southampton  214 non-null    uint8  \n",
+      "dtypes: float64(2), int64(5), object(2), uint8(3)\n",
+      "memory usage: 17.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "validate.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 178 entries, 561 to 809\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column                   Non-Null Count  Dtype  \n",
+      "---  ------                   --------------  -----  \n",
+      " 0   survived                 178 non-null    int64  \n",
+      " 1   pclass                   178 non-null    int64  \n",
+      " 2   sex                      178 non-null    object \n",
+      " 3   age                      178 non-null    float64\n",
+      " 4   sibsp                    178 non-null    int64  \n",
+      " 5   parch                    178 non-null    int64  \n",
+      " 6   fare                     178 non-null    float64\n",
+      " 7   embark_town              178 non-null    object \n",
+      " 8   alone                    178 non-null    int64  \n",
+      " 9   sex_male                 178 non-null    uint8  \n",
+      " 10  embark_town_Queenstown   178 non-null    uint8  \n",
+      " 11  embark_town_Southampton  178 non-null    uint8  \n",
+      "dtypes: float64(2), int64(5), object(2), uint8(3)\n",
+      "memory usage: 14.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "test.info()"
    ]
   },
   {
