Edit to final question

--- a/tidy_data.ipynb
+++ b/tidy_data.ipynb
@@ -1598,7 +1598,9 @@
    "source": [
     "'''\n",
     "Yes it was recipe b, bottom rack, 300 degrees\n",
-    "'''"
+    "'''\n",
+    "index_of_highest_score = df.total_score.argmax()\n",
+    "df[df.index == index_of_highest_score]\n"
    ]
   }
  ],
