Added some examples from walkthrough

--- a/tidy_data.ipynb
+++ b/tidy_data.ipynb
@@ -538,6 +538,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# alternate answer via zach walkthrough:\n",
+    "grades = {\n",
+    "    'P': 1,\n",
+    "    'A': 0,\n",
+    "    'H': 0.5,\n",
+    "    'T': 0.9,\n",
+    "}\n",
+    "\n",
+    "df = pd.read_csv('untidy-data/attendance.csv')\n",
+    "df = df.rename(columns={'Unnamed: 0': 'student'})\n",
+    "df = df.melt(id_vars='student', var_name='date')\n",
+    "df['grade'] = df.value.apply(get_attendance_grade)\n",
+    "df.groupby('student').grade.mean()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1601,6 +1622,17 @@
     "'''\n",
     "index_of_highest_score = df.total_score.argmax()\n",
     "df[df.index == index_of_highest_score]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# alternate via zach walkthrough:\n",
+    "\n",
+    "df.sort_values(by='tastiness').tail()"
    ]
   }
  ],
