--- a/classification_exercises.ipynb
+++ b/classification_exercises.ipynb
@@ -5172,6 +5172,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7. Create any other visualizations and run any other statistical tests you think will be helpful in exploring this data set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "t = 11.3783\n",
+      "p = 0.00000000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "virginica_sepal_length = train_df[train_df.species == 'virginica'].petal_length\n",
+    "versicolor_sepal_length = train_df[train_df.species == 'versicolor'].petal_length\n",
+    "\n",
+    "t, p = stats.ttest_ind(virginica_sepal_length, versicolor_sepal_length, equal_var = False)\n",
+    "print(f'''\n",
+    "t = {t:.4f}\n",
+    "p = {p:.8f}\n",
+    "''')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
